0026488: The class ShapeUpgrade_UnifySameDomain is not documented.